Avoid breaks in <code> elements.

--- a/src/assets/css/utilities/content.css
+++ b/src/assets/css/utilities/content.css
@@ -17,3 +17,8 @@
   inline-size: 100%;
   grid-column: 1 / 4;
 }
+
+code {
+  overflow: hidden;
+  white-space: nowrap;
+}
